# Prediction_Production_EnR

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  run_api.py  setup.py
archives/: expo_solaire.py  producteur.py  producteur_solaire.py
data/raw/: eolien_histo.csv  eolien_previ.csv
docs/: index.html  main.html  run_api.html  scripts.html  search.js  src.html
docs/scripts/: daily_fetch.html  run_prediction.html  train_models.html
docs/src/: api.html  data_ingestion.html  frontend.html  models.html  prediction.html  producers.html
models/: ridge_cv_solar.pkl  scaler_rf_solar.pkl  xgboost_solar.pkl
notebooks/models/: elasticnet_solar.pkl  hgb_solar.pkl  ridge_cv_solar.pkl  scaler_ridge_solar.pkl  xgboost_solar.pkl
scripts/: daily_fetch.py  run_prediction.py  train_models.py
src/: __init__.py
src/api/: main.py  route_api_solar.py  utils.py
src/config/: settings.py
src/data_ingestion/: __init__.py  end_eolienne.py  etl_supabase.py  expo_solaire.py  fetch_all.py  fetch_hubeau.py  fetch_open_meteo.py  fetch_open_meteo_eolien.py  fetch_open_meteo_solaire.py  fetch_production.py  handler_hubeau.py  handler_meteo.py  (+1 more)
tests/: conftest.py  test__solar_api.py  test_api_config.py  test_base_producer.py  test_data_cleaner.py  test_data_ingestion.py  test_etl_supabase.py  test_fetch_all.py  test_fetch_hubeau.py  test_fetch_open_meteo_solaire.py  test_fetch_production.py  test_handler_hubeau.py  test_handler_meteo.py  test_hydro_producer.py  test_open_meteo_eolien.py  test_producers.py  test_settings.py  test_solar_producer.py  test_wind_producer.py
(+64 files in other folders)
